review: update oapi and remove detail level
